Project2/code/syntax.output
Terminals unused in grammar

   MISSING_RP
   MISSING_RB


State 25 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 40 conflicts: 10 shift/reduce
State 55 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 10 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC error RC
   28       | LC DefList StmtList

   29 StmtList: Stmt StmtList
   30         | /* empty */

   31 Stmt: Exp SEMI
   32     | Exp error SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | IF LP Exp RP Exp error ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | WHILE LP error RP Stmt

   40 DefList: Def DefList
   41        | /* empty */

   42 Def: Specifier DecList SEMI
   43    | Specifier DecList
   44    | error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | LP error RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp LB error RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 20 27 32 37 39 44 58 64
INT (258) 19 67
FLOAT (259) 68
ID (260) 15 17 18 21 22 61 62 65 66
SEMI (261) 4 5 7 31 32 34 42 44
COMMA (262) 10 23 46 69
ASSIGNOP (263) 48 49
RELOP (264) 52
PLUS (265) 53
MINUS (266) 54 59
STAR (267) 55
DIV (268) 56
AND (269) 50
OR (270) 51
DOT (271) 65
NOT (272) 60
TYPE (273) 11
LP (274) 21 22 35 36 37 38 39 57 58 61 62
RP (275) 21 22 35 36 37 38 39 57 58 61 62
LB (276) 19 20 63 64
RB (277) 19 20 63 64
LC (278) 13 26 27 28
RC (279) 13 26 27
STRUCT (280) 13 14
RETURN (281) 34
IF (282) 35 36 37
ELSE (283) 36 37
WHILE (284) 38 39
MISSING_SEMI (285)
MISSING_RP (286)
MISSING_RB (287)
MISSING_RC (288)
LOWER_THAN_ELSE (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1, on right: 0
ExtDefList (37)
    on left: 2 3, on right: 1 2
ExtDef (38)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (39)
    on left: 9 10, on right: 4 10
Specifier (40)
    on left: 11 12, on right: 4 5 6 7 8 25 42 43
StructSpecifier (41)
    on left: 13 14, on right: 12
OptTag (42)
    on left: 15 16, on right: 13
Tag (43)
    on left: 17, on right: 14
VarDec (44)
    on left: 18 19 20, on right: 9 10 19 20 25 47 48
FunDec (45)
    on left: 21 22, on right: 6 7
VarList (46)
    on left: 23 24, on right: 21 23
ParamDec (47)
    on left: 25, on right: 23 24
CompSt (48)
    on left: 26 27 28, on right: 6 33
StmtList (49)
    on left: 29 30, on right: 26 28 29
Stmt (50)
    on left: 31 32 33 34 35 36 37 38 39, on right: 29 35 36 37 38 39
DefList (51)
    on left: 40 41, on right: 13 26 28 40
Def (52)
    on left: 42 43 44, on right: 40
DecList (53)
    on left: 45 46, on right: 42 43 46
Dec (54)
    on left: 47 48, on right: 45 46
Exp (55)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 31 32 34 35 36 37 38 48 49 50 51 52 53 54 55 56
    57 59 60 63 64 65 69 70
Args (56)
    on left: 69 70, on right: 61 69


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


state 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


state 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)


state 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 24
    LC    shift, and go to state 25

    CompSt  go to state 26


state 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


state 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 22

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


state 23

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


state 24

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


state 25

   26 CompSt: LC . DefList StmtList RC
   27       | LC . error RC
   28       | LC . DefList StmtList

    error   shift, and go to state 39
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $end    reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    TYPE    [reduce using rule 41 (DefList)]
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    STRUCT  [reduce using rule 41 (DefList)]
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    ELSE    reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


state 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 27

   44 Def: error . SEMI

    SEMI  shift, and go to state 41


state 28

   42 Def: Specifier . DecList SEMI
   43    | Specifier . DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


state 29

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


state 30

   40 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $end    reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    TYPE    [reduce using rule 41 (DefList)]
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    STRUCT  [reduce using rule 41 (DefList)]
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    ELSE    reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 30


state 31

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 32

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 47


state 33

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


state 34

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 24 (VarList)


state 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 37

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 50


state 38

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


state 39

   27 CompSt: LC error . RC
   44 Def: error . SEMI

    SEMI  shift, and go to state 41
    RC    shift, and go to state 52


state 40

   26 CompSt: LC DefList . StmtList RC
   28       | LC DefList . StmtList

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    INT       [reduce using rule 30 (StmtList)]
    FLOAT     [reduce using rule 30 (StmtList)]
    ID        [reduce using rule 30 (StmtList)]
    MINUS     [reduce using rule 30 (StmtList)]
    NOT       [reduce using rule 30 (StmtList)]
    LP        [reduce using rule 30 (StmtList)]
    LC        [reduce using rule 30 (StmtList)]
    RETURN    [reduce using rule 30 (StmtList)]
    IF        [reduce using rule 30 (StmtList)]
    WHILE     [reduce using rule 30 (StmtList)]
    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


state 41

   44 Def: error SEMI .

    $default  reduce using rule 44 (Def)


state 42

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 23

    $default  reduce using rule 47 (Dec)


state 43

   42 Def: Specifier DecList . SEMI
   43    | Specifier DecList .

    SEMI  shift, and go to state 67

    $default  reduce using rule 43 (Def)


state 44

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 45 (DecList)


state 45

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 46

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


state 47

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


state 48

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


state 49

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 34


state 50

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


state 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 52

   27 CompSt: LC error RC .

    $default  reduce using rule 27 (CompSt)


state 53

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


state 54

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


state 55

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 70

    LP        [reduce using rule 66 (Exp)]
    $default  reduce using rule 66 (Exp)


state 56

   59 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 71


state 57

   60 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 72


state 58

   57 Exp: LP . Exp RP
   58    | LP . error RP

    error  shift, and go to state 73
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


state 59

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


state 60

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP Exp error ELSE Stmt

    LP  shift, and go to state 76


state 61

   38 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP error RP Stmt

    LP  shift, and go to state 77


state 62

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


state 63

   26 CompSt: LC DefList StmtList . RC
   28       | LC DefList StmtList .

    RC  shift, and go to state 78

    RC        [reduce using rule 28 (CompSt)]
    $default  reduce using rule 28 (CompSt)


state 64

   29 StmtList: Stmt . StmtList

    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    INT       [reduce using rule 30 (StmtList)]
    FLOAT     [reduce using rule 30 (StmtList)]
    ID        [reduce using rule 30 (StmtList)]
    MINUS     [reduce using rule 30 (StmtList)]
    NOT       [reduce using rule 30 (StmtList)]
    LP        [reduce using rule 30 (StmtList)]
    LC        [reduce using rule 30 (StmtList)]
    RETURN    [reduce using rule 30 (StmtList)]
    IF        [reduce using rule 30 (StmtList)]
    WHILE     [reduce using rule 30 (StmtList)]
    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 79
    Stmt      go to state 64
    Exp       go to state 65


state 65

   31 Stmt: Exp . SEMI
   32     | Exp . error SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    error     shift, and go to state 80
    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


state 66

   48 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 92


state 67

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


state 68

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 93
    Dec      go to state 44


state 69

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 70

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


state 71

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 59 (Exp)


state 72

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 60 (Exp)


state 73

   58 Exp: LP error . RP

    RP  shift, and go to state 97


state 74

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 98
    LB        shift, and go to state 91


state 75

   34 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . LB error RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


state 76

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP Exp error ELSE Stmt

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
